# pytorch_plugin

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  bind.cc  setup.py  test.py
config/: setup.cfg 
op_register/: CMakeLists.txt  register_torch_op.cpp  regitster_torch_op.h
py_bind/: bind.cc
scripts/: build.sh  set_torch.py  test.sh
src/: CMakeLists.txt
src/op_deregister/: op_deregister.cpp  op_deregister.h
src/op_register/: CMakeLists.txt  register_torch_op.cpp  regitster_torch_op.h
src/plt_hook/: hook.cpp  hook_register.cpp  hook_register.h
src/py_bind/: bind.cc
src/python/torch_plugin/: __init__.py
src/util/: log.cpp  log.h
tests/: test.py  test_regiseter_op.py
torch_plugin/: __init__.py
xtrans_demo/: CMakeLists.txt  register_torch_op.cpp  regiter.cc  regitster_xtrans.h
